[package]
name = "elgato-streamdeck"
description = "HidApi driver for Elgato Stream Deck devices"
authors = ["TheJebForge", "nekename"]
version = "0.11.1"
edition = "2024"
repository = "https://github.com/OpenActionAPI/rust-elgato-streamdeck"
license = "MPL-2.0"

[dependencies]
async-hid = { git = 'https://github.com/HRKings/async-hid', features = [ "tokio" ], default-features = false }
futures-lite = "2.6.1"
image = { version = "0.25", default-features = false, features = [ "bmp", "jpeg" ] }
tokio = { version = "1", features = [ "macros", "rt-multi-thread", "time", "sync" ] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
