[package]
name = "elgato-streamdeck-async"
description = "Async HidApi driver for Elgato Stream Deck devices"
authors = ["TheJebForge", "nekename", "HRKings"]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/HRKings/rust-streamdeck-async"
license = "MPL-2.0"

[dependencies]
async-hid = { git = 'https://github.com/HRKings/async-hid', features = [ "tokio" ], default-features = false }
futures-lite = "2.6.1"
image = { version = "0.25", default-features = false, features = [ "bmp", "jpeg" ] }
tokio = { version = "1.47.1", features = [ "macros", "rt-multi-thread", "time", "sync" ] }

[features]
strum = ["dep:strum"]
stream = ["dep:tokio-stream"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
